[gd_scene load_steps=22 format=3 uid="uid://bl1jporj7hosu"]

[ext_resource type="Texture2D" uid="uid://d0o2q6fijmd1" path="res://bridges/assets/dark green.png" id="1_uowbf"]
[ext_resource type="Script" path="res://bridges/script/grid.gd" id="1_xtvvi"]
[ext_resource type="Texture2D" uid="uid://b4v4into7dah" path="res://bridges/assets/darkest green.png" id="2_7c3ba"]
[ext_resource type="Script" path="res://bridges/script/grid_visualizer.gd" id="2_d8ovy"]
[ext_resource type="Texture2D" uid="uid://d4khq8o7aaei" path="res://bridges/assets/green.png" id="3_m852x"]
[ext_resource type="Texture2D" uid="uid://bbktakyncn7nc" path="res://bridges/assets/deer_40x40.png" id="3_x44oq"]
[ext_resource type="Texture2D" uid="uid://dc2lxeyr45vp3" path="res://bridges/assets/blue_dark.png" id="4_j4qyx"]
[ext_resource type="Texture2D" uid="uid://cw66eehxwh20w" path="res://bridges/assets/snake_50x10.png" id="7_jp1m1"]
[ext_resource type="Texture2D" uid="uid://bax18833oqune" path="res://bridges/assets/red.png" id="8_6e2b2"]
[ext_resource type="Texture2D" uid="uid://desp8tcpswyl4" path="res://bridges/assets/spider_10x10.png" id="8_rtjqf"]
[ext_resource type="Script" path="res://bridges/script/grid_drag.gd" id="12_re1q8"]
[ext_resource type="PackedScene" uid="uid://dvgr170gyuhpq" path="res://bridges/scenes/player.tscn" id="12_y7gdk"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gxf1m"]
texture = ExtResource("1_uowbf")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bm1vh"]
texture = ExtResource("2_7c3ba")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_l8uy3"]
texture = ExtResource("3_x44oq")
texture_region_size = Vector2i(10, 10)
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_q7stx"]
texture = ExtResource("3_m852x")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_0sulk"]
texture = ExtResource("4_j4qyx")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_6cc0j"]
texture = ExtResource("8_6e2b2")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_olvdf"]
texture = ExtResource("7_jp1m1")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tbudc"]
texture = ExtResource("8_rtjqf")
texture_region_size = Vector2i(10, 10)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_ne4ig"]
tile_size = Vector2i(10, 10)
sources/0 = SubResource("TileSetAtlasSource_gxf1m")
sources/1 = SubResource("TileSetAtlasSource_bm1vh")
sources/2 = SubResource("TileSetAtlasSource_q7stx")
sources/3 = SubResource("TileSetAtlasSource_0sulk")
sources/7 = SubResource("TileSetAtlasSource_6cc0j")
sources/8 = SubResource("TileSetAtlasSource_olvdf")
sources/9 = SubResource("TileSetAtlasSource_tbudc")
sources/10 = SubResource("TileSetAtlasSource_l8uy3")

[node name="Node2D" type="Node2D"]

[node name="Grid" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ne4ig")
format = 2
script = ExtResource("1_xtvvi")

[node name="Grid_Visualizer" type="Node2D" parent="Grid"]
script = ExtResource("2_d8ovy")

[node name="Control" type="Control" parent="Grid"]
layout_mode = 3
anchors_preset = 0
offset_right = 1100.0
offset_bottom = 650.0

[node name="Drag_Grid" type="TextureRect" parent="Grid/Control"]
custom_minimum_size = Vector2(1100, 650)
layout_mode = 1
offset_right = 1100.0
offset_bottom = 650.0
script = ExtResource("12_re1q8")
metadata/_edit_use_anchors_ = true

[node name="Animal_Inventory" type="HBoxContainer" parent="Grid/Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Deer_Item" type="TextureRect" parent="Grid/Control/Animal_Inventory"]
layout_mode = 2
tooltip_text = "DEER"
texture = ExtResource("3_x44oq")
script = ExtResource("12_re1q8")

[node name="Snake_Item" type="TextureRect" parent="Grid/Control/Animal_Inventory"]
layout_mode = 2
tooltip_text = "SNAKE"
texture = ExtResource("7_jp1m1")
script = ExtResource("12_re1q8")

[node name="Spider_Item" type="TextureRect" parent="Grid/Control/Animal_Inventory"]
layout_mode = 2
tooltip_text = "SPIDER"
texture = ExtResource("8_rtjqf")
script = ExtResource("12_re1q8")

[node name="Drag_or_Fox" type="CheckButton" parent="Grid/Control"]
layout_mode = 0
offset_left = 1103.0
offset_top = 74.0
offset_right = 1147.0
offset_bottom = 98.0

[node name="Reset" type="Button" parent="Grid/Control"]
layout_mode = 0
offset_left = 1099.0
offset_top = 1.0
offset_right = 1150.0
offset_bottom = 32.0
text = "Reset"

[node name="Last_State" type="Button" parent="Grid/Control"]
layout_mode = 0
offset_left = 1032.0
offset_top = 36.0
offset_right = 1152.0
offset_bottom = 67.0
text = "One Step Back"

[node name="Player" parent="Grid" instance=ExtResource("12_y7gdk")]
position = Vector2(58, 194)

[connection signal="current_grid" from="Grid" to="Grid/Control/Drag_Grid" method="_on_grid_current_grid"]
[connection signal="current_grid" from="Grid" to="Grid/Control/Animal_Inventory/Deer_Item" method="_on_grid_current_grid"]
[connection signal="current_grid" from="Grid" to="Grid/Control/Animal_Inventory/Snake_Item" method="_on_grid_current_grid"]
[connection signal="current_grid" from="Grid" to="Grid/Control/Animal_Inventory/Spider_Item" method="_on_grid_current_grid"]
[connection signal="dragging_done" from="Grid/Control/Drag_Grid" to="Grid" method="_on_drag_grid_dragging_done"]
[connection signal="is_dragging" from="Grid/Control/Drag_Grid" to="Grid" method="_on_drag_grid_is_dragging"]
[connection signal="need_grid" from="Grid/Control/Drag_Grid" to="Grid" method="_on_drag_grid_need_grid"]
[connection signal="update_grid" from="Grid/Control/Drag_Grid" to="Grid" method="_on_drag_grid_update_grid"]
[connection signal="dragging_done" from="Grid/Control/Animal_Inventory/Deer_Item" to="Grid" method="_on_deer_item_dragging_done"]
[connection signal="is_dragging" from="Grid/Control/Animal_Inventory/Deer_Item" to="Grid" method="_on_deer_item_is_dragging"]
[connection signal="need_grid" from="Grid/Control/Animal_Inventory/Deer_Item" to="Grid" method="_on_deer_item_need_grid"]
[connection signal="update_grid" from="Grid/Control/Animal_Inventory/Deer_Item" to="Grid" method="_on_deer_item_update_grid"]
[connection signal="dragging_done" from="Grid/Control/Animal_Inventory/Snake_Item" to="Grid" method="_on_snake_item_dragging_done"]
[connection signal="is_dragging" from="Grid/Control/Animal_Inventory/Snake_Item" to="Grid" method="_on_snake_item_is_dragging"]
[connection signal="need_grid" from="Grid/Control/Animal_Inventory/Snake_Item" to="Grid" method="_on_snake_item_need_grid"]
[connection signal="update_grid" from="Grid/Control/Animal_Inventory/Snake_Item" to="Grid" method="_on_snake_item_update_grid"]
[connection signal="dragging_done" from="Grid/Control/Animal_Inventory/Spider_Item" to="Grid" method="_on_spider_item_dragging_done"]
[connection signal="is_dragging" from="Grid/Control/Animal_Inventory/Spider_Item" to="Grid" method="_on_spider_item_is_dragging"]
[connection signal="need_grid" from="Grid/Control/Animal_Inventory/Spider_Item" to="Grid" method="_on_spider_item_need_grid"]
[connection signal="update_grid" from="Grid/Control/Animal_Inventory/Spider_Item" to="Grid" method="_on_spider_item_update_grid"]
[connection signal="pressed" from="Grid/Control/Reset" to="Grid" method="_on_reset_pressed"]
[connection signal="pressed" from="Grid/Control/Last_State" to="Grid" method="_on_last_state_pressed"]
